[package]
name = "lumber-jack"
version = "0.1.0"
authors = ["Miles Granger <miles59923@gmail.com>"]
build = "build.rs"

[lib]
name = "lumberjack"
crate-type = ["cdylib"]

[dependencies]
num = "^0.1"
ndarray = "^0.11.1"
pyo3 = {version="^0.2", features=["extension-module"]}

[build-dependencies]
cbindgen = "^0.6.0"

